Segundo commit para validar cambios en página

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ body{
 <div style="height:1000px;background-color:rgb(0, 0, 0);font-size:36px">
 Un ejemplo de una página web sencilla.
 Pronto algo mejor.
+Cristiablo estuvo aquí.
 </div>
 
 </body>
